--- a/pipeline.yml
+++ b/pipeline.yml
@@ -1,39 +1,26 @@
-# pipeline.yml
+# pipeline.yml (Versión Optimizada)
 # Define el flujo de ejecución lineal para el sistema SIGIE.
-# Las etapas se ejecutan en el orden listado.
+# Orden de etapas optimizado para "fallar rápido y barato".
 
 stages:
-  # 1. Etapa de creación inicial de ítems
+  # 1. Validación de la solicitud del usuario
+  - name: validate_user_request
+    params:
+      prompt: "00_agent_request_validator.md"
+      model: "gemini-2.0-flash"
+      temperature: 0.2
+
+  # 2. Creación inicial del ítem
   - name: generate_items
     params:
       prompt: "01_agent_dominio.md"
-      provider: gemini
       model: "gemini-2.0-flash"
       temperature: 0.7
-      max_tokens: 4096
 
-  # 2. Validación programática de reglas duras
+  # 3. Validación estructural programática
   - name: validate_hard
 
-  # 3. Ciclo de validación y refinamiento lógico
-  - name: validate_item_logic
-    params:
-      prompt: "02_agent_razonamiento.md"
-      provider: gemini
-      model: gemini-2.0-flash
-      temperature: 0.3
-      max_tokens: 2048
-
-  - name: refine_item_logic
-    listen_to_status_pattern: "logic_validation.needs_revision"
-    params:
-      prompt: "03_agente_refinador_razonamiento.md"
-      provider: gemini
-      model: gemini-2.0-flash
-      temperature: 0.5
-      max_tokens: 4096
-
-  # 4. Ciclo de validación y refinamiento de contenido
+  # 3. Ciclo de Contenido (la validación más fundamental primero)
   - name: validate_content_validity
     params:
       prompt: "XX_agent_content_validity.md"
@@ -51,7 +38,25 @@ stages:
       temperature: 0.5
       max_tokens: 4096
 
-  # 5. Ciclo de validación y refinamiento de políticas
+  # 4. Ciclo de Lógica (complementario al de contenido)
+  - name: validate_item_logic
+    params:
+      prompt: "02_agent_razonamiento.md"
+      provider: gemini
+      model: gemini-2.0-flash
+      temperature: 0.3
+      max_tokens: 2048
+
+  - name: refine_item_logic
+    listen_to_status_pattern: "logic_validation.needs_revision"
+    params:
+      prompt: "03_agente_refinador_razonamiento.md"
+      provider: gemini
+      model: gemini-2.0-flash
+      temperature: 0.5
+      max_tokens: 4096
+
+  # 5. Ciclo de Políticas (filtro de equidad y sesgos)
   - name: validate_policy
     params:
       prompt: "05_agent_politicas.md"
@@ -69,21 +74,19 @@ stages:
       temperature: 0.5
       max_tokens: 4096
 
-  # 6. Validación programática de reglas suaves (advertencias)
+  # 6. Validación de reglas suaves
   - name: validate_soft
 
-  # 7. Etapa de corrección de estilo directa
+  # 7. Refinamiento de Estilo (pulido final)
   - name: refine_item_style
     params:
       prompt: "04_agente_refinador_estilo.md"
       provider: gemini
       model: "gemini-2.0-flash"
       temperature: 0.6
-      # --- CORRECCIÓN ---
-      # Aumentamos el límite para evitar que la respuesta JSON se corte.
       max_tokens: 8192
 
-  # 8. Etapa de evaluación final por un LLM
+  # 8. Evaluación y Veredicto Final
   - name: finalize_item
     params:
       prompt: "07_agent_final.md"
@@ -92,5 +95,5 @@ stages:
       temperature: 0.2
       max_tokens: 2048
 
-  # 9. Persistencia final en la base de datos
+  # 9. Persistencia en Base de Datos
   - name: persist
