--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ rsa==4.9.1
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
+streamlit==1.46.1
 tenacity==8.5.0
 tqdm==4.67.1
 typing-inspection==0.4.1
